lesson 2 hw2 done

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,5 +10,17 @@
     <li><a href="users">Users</a></li>
     <li><a href="meals">Meals</a></li>
 </ul>
+<br>
+<h2>Select User:</h2>
+<br>
+<form action="users" method="post">
+    <select name="usrSelect" style="border: dashed 1px">
+        <option name="1" value="1" selected>1</option>
+        <option name="2" value="2">2</option>
+        <option name="3" value="3">3</option>
+    </select>
+
+    <p><input type="submit" value="Enter"></p>
+</form>
 </body>
 </html>
